tests/should_succeed/projection_toggle.coma
module M_proj_toggle
  use creusot.prelude.MutBorrow
  use creusot.prelude.Any
  
  type t_T
  
  predicate inv_T (_1: t_T)
  
  predicate invariant_ref_T [@inline:trivial] (self: MutBorrow.t t_T) = inv_T self.current /\ inv_T self.final
  
  meta "rewrite_def" predicate invariant_ref_T
  
  predicate inv_ref_T [@inline:trivial] (_1: MutBorrow.t t_T) = invariant_ref_T _1
  
  meta "rewrite_def" predicate inv_ref_T
  
  predicate resolve_ref_T [@inline:trivial] (_1: MutBorrow.t t_T) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_ref_T
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec proj_toggle_T (toggle: bool) (a: MutBorrow.t t_T) (b: MutBorrow.t t_T) (return (x: MutBorrow.t t_T)) =
    {[@expl:proj_toggle 'a' type invariant] inv_ref_T a}
    {[@expl:proj_toggle 'b' type invariant] inv_ref_T b}
    (! bb0
    [ bb0 = any [ br0 -> {toggle = false} (! bb2) | br1 -> {toggle} (! bb1) ]
    | bb1 = s0
      [ s0 = {[@expl:type invariant] inv_ref_T b} s1
      | s1 = -{resolve_ref_T b}- s2
      | s2 = {inv_T a.current}
        MutBorrow.borrow_final <t_T> {a.current} {MutBorrow.get_id a}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_11 <- _bor ] -{inv_T _bor.final}-
            [ &a <- { a with current = _bor.final } ] s3)
      | s3 = {inv_T _11.current}
        MutBorrow.borrow_final <t_T> {_11.current} {MutBorrow.get_id _11}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_9 <- _bor ] -{inv_T _bor.final}-
            [ &_11 <- { _11 with current = _bor.final } ] s4)
      | s4 = {[@expl:type invariant] inv_ref_T _11} s5
      | s5 = -{resolve_ref_T _11}- s6
      | s6 = bb3 ]
    | bb2 = s0
      [ s0 = {[@expl:type invariant] inv_ref_T a} s1
      | s1 = -{resolve_ref_T a}- s2
      | s2 = {inv_T b.current}
        MutBorrow.borrow_final <t_T> {b.current} {MutBorrow.get_id b}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_9 <- _bor ] -{inv_T _bor.final}-
            [ &b <- { b with current = _bor.final } ] s3)
      | s3 = bb3 ]
    | bb3 = s0
      [ s0 = {inv_T _9.current}
        MutBorrow.borrow_final <t_T> {_9.current} {MutBorrow.get_id _9}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_4 <- _bor ] -{inv_T _bor.final}-
            [ &_9 <- { _9 with current = _bor.final } ] s1)
      | s1 = {[@expl:type invariant] inv_ref_T _9} s2
      | s2 = -{resolve_ref_T _9}- s3
      | s3 = {inv_T _4.current}
        MutBorrow.borrow_final <t_T> {_4.current} {MutBorrow.get_id _4}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_ret <- _bor ] -{inv_T _bor.final}-
            [ &_4 <- { _4 with current = _bor.final } ] s4)
      | s4 = {[@expl:type invariant] inv_ref_T _4} s5
      | s5 = -{resolve_ref_T _4}- s6
      | s6 = {[@expl:type invariant] inv_ref_T b} s7
      | s7 = -{resolve_ref_T b}- s8
      | s8 = {[@expl:type invariant] inv_ref_T a} s9
      | s9 = -{resolve_ref_T a}- s10
      | s10 = return {_ret} ] ]
    [ & _ret: MutBorrow.t t_T = Any.any_l ()
    | & toggle: bool = toggle
    | & a: MutBorrow.t t_T = a
    | & b: MutBorrow.t t_T = b
    | & _4: MutBorrow.t t_T = Any.any_l ()
    | & _9: MutBorrow.t t_T = Any.any_l ()
    | & _11: MutBorrow.t t_T = Any.any_l () ])
    [ return (result: MutBorrow.t t_T) -> {[@expl:proj_toggle result type invariant] inv_ref_T result}
      {[@expl:proj_toggle ensures] if toggle then
        result = a /\ b.final = b.current
      else
        result = b /\ a.final = a.current
      }
      (! return {result}) ]
end
module M_f
  use creusot.int.Int32
  use creusot.prelude.MutBorrow
  use creusot.prelude.Any
  
  let rec proj_toggle_i32 (toggle: bool) (a: MutBorrow.t Int32.t) (b: MutBorrow.t Int32.t)
    (return (x: MutBorrow.t Int32.t)) = any
    [ return (result: MutBorrow.t Int32.t) -> {if toggle then
        result = a /\ b.final = b.current
      else
        result = b /\ a.final = a.current
      }
      (! return {result}) ]
  
  predicate resolve_ref_i32 [@inline:trivial] (_1: MutBorrow.t Int32.t) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_ref_i32
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec f (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &a <- (10: Int32.t) ] s1
      | s1 = [ &b <- (5: Int32.t) ] s2
      | s2 = MutBorrow.borrow_mut <Int32.t> {a}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_5 <- _bor ] [ &a <- _bor.final ] s3)
      | s3 = MutBorrow.borrow_mut <Int32.t> {b}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_7 <- _bor ] [ &b <- _bor.final ] s4)
      | s4 = MutBorrow.borrow_final <Int32.t> {_5.current} {MutBorrow.get_id _5}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_4 <- _bor ] [ &_5 <- { _5 with current = _bor.final } ] s5)
      | s5 = MutBorrow.borrow_final <Int32.t> {_7.current} {MutBorrow.get_id _7}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_6 <- _bor ] [ &_7 <- { _7 with current = _bor.final } ] s6)
      | s6 = proj_toggle_i32 {true} {_4} {_6} (fun (_x: MutBorrow.t Int32.t) -> [ &x <- _x ] s7)
      | s7 = -{resolve_ref_i32 _7}- s8
      | s8 = -{resolve_ref_i32 _5}- s9
      | s9 = Int32.add {x.current} {(5: Int32.t)} (fun (_x: Int32.t) -> [ &x <- { x with current = _x } ] s10)
      | s10 = -{resolve_ref_i32 x}- s11
      | s11 = [ &_9 <- a = (15: Int32.t) ] s12
      | s12 = any [ br0 -> {_9 = false} (! bb3) | br1 -> {_9} (! bb2) ] ]
    | bb2 = return {_ret}
    | bb3 = {false} any ]
    [ & _ret: () = Any.any_l ()
    | & a: Int32.t = Any.any_l ()
    | & b: Int32.t = Any.any_l ()
    | & x: MutBorrow.t Int32.t = Any.any_l ()
    | & _4: MutBorrow.t Int32.t = Any.any_l ()
    | & _5: MutBorrow.t Int32.t = Any.any_l ()
    | & _6: MutBorrow.t Int32.t = Any.any_l ()
    | & _7: MutBorrow.t Int32.t = Any.any_l ()
    | & _9: bool = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
