tests/should_fail/ptr_read.coma
module M_f
  use creusot.prelude.MutBorrow
  use creusot.prelude.Opaque
  use creusot.prelude.Mode
  use creusot.prelude.Ptr
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  type t_T
  
  predicate inv_T (_1: t_T)
  
  type t_Perm_ptr_T
  
  type tup2_ptr_T_Ghost_refmut_Perm_ptr_T = { f0: Opaque.ptr; f1: MutBorrow.t t_Perm_ptr_T }
  
  predicate invariant_refmut_T [@inline:trivial] (self: MutBorrow.t t_T) = inv_T self.current /\ inv_T self.final
  
  meta "rewrite_def" predicate invariant_refmut_T
  
  predicate inv_refmut_T [@inline:trivial] (_1: MutBorrow.t t_T) = invariant_refmut_T _1
  
  meta "rewrite_def" predicate inv_refmut_T
  
  predicate is_null_ptr_T (self: Opaque.ptr) = Ptr.addr_logic_u64 self = (0: UInt64.t)
  
  function ward_ptr_T (self: t_Perm_ptr_T) : Opaque.ptr
  
  predicate metadata_matches_T [@inline:trivial] (_value: t_T) (_metadata: ()) = true
  
  meta "rewrite_def" predicate metadata_matches_T
  
  function val_ptr_T (self: t_Perm_ptr_T) : t_T
  
  function metadata_T (_1: Opaque.ptr) : ()
  
  predicate invariant_ref_T [@inline:trivial] (self: t_T) = inv_T self
  
  meta "rewrite_def" predicate invariant_ref_T
  
  predicate inv_ref_T [@inline:trivial] (_1: t_T) = invariant_ref_T _1
  
  meta "rewrite_def" predicate inv_ref_T
  
  predicate invariant_Perm_ptr_T (self: t_Perm_ptr_T) =
    not is_null_ptr_T (ward_ptr_T self)
    /\ metadata_matches_T (val_ptr_T self) (metadata_T (ward_ptr_T self)) /\ inv_ref_T (val_ptr_T self)
  
  predicate inv_Perm_ptr_T (_1: t_Perm_ptr_T)
  
  axiom inv_axiom [@rewrite]: forall x: t_Perm_ptr_T [inv_Perm_ptr_T x]. inv_Perm_ptr_T x = invariant_Perm_ptr_T x
  
  predicate invariant_refmut_Perm_ptr_T [@inline:trivial] (self: MutBorrow.t t_Perm_ptr_T) =
    inv_Perm_ptr_T self.current /\ inv_Perm_ptr_T self.final
  
  meta "rewrite_def" predicate invariant_refmut_Perm_ptr_T
  
  predicate inv_refmut_Perm_ptr_T [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_T) = invariant_refmut_Perm_ptr_T _1
  
  meta "rewrite_def" predicate inv_refmut_Perm_ptr_T
  
  predicate invariant_Ghost_refmut_Perm_ptr_T [@inline:trivial] (self: MutBorrow.t t_Perm_ptr_T) =
    inv_refmut_Perm_ptr_T self
  
  meta "rewrite_def" predicate invariant_Ghost_refmut_Perm_ptr_T
  
  predicate inv_Ghost_refmut_Perm_ptr_T [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_T) =
    invariant_Ghost_refmut_Perm_ptr_T _1
  
  meta "rewrite_def" predicate inv_Ghost_refmut_Perm_ptr_T
  
  predicate inv_tup2_ptr_T_Ghost_refmut_Perm_ptr_T [@inline:trivial] (_1: tup2_ptr_T_Ghost_refmut_Perm_ptr_T) =
    inv_Ghost_refmut_Perm_ptr_T _1.f1
  
  meta "rewrite_def" predicate inv_tup2_ptr_T_Ghost_refmut_Perm_ptr_T
  
  let rec from_mut_T (mode: Mode.t) (r: MutBorrow.t t_T) (return (x: tup2_ptr_T_Ghost_refmut_Perm_ptr_T)) =
    {[@stop_split] [@expl:from_mut 'r' type invariant] inv_refmut_T r}
    any
    [ return (result: tup2_ptr_T_Ghost_refmut_Perm_ptr_T) ->
    {[@stop_split] [@expl:from_mut_T ensures] ([@stop_split] [@expl:from_mut result type invariant] inv_tup2_ptr_T_Ghost_refmut_Perm_ptr_T result)
      /\ ([@stop_split] [@expl:from_mut ensures #0] ward_ptr_T result.f1.current = result.f0)
      /\ ([@stop_split] [@expl:from_mut ensures #1] val_ptr_T result.f1.current = r.current)
      /\ ([@stop_split] [@expl:from_mut ensures #2] val_ptr_T result.f1.final = r.final)}
      (! return {result}) ]
  
  type tup2_T_Ghost_refmut_Perm_ptr_T = { f0'0: t_T; f1'0: MutBorrow.t t_Perm_ptr_T }
  
  function fin_Ghost_refmut_Perm_ptr_T [@inline:trivial] (self: MutBorrow.t t_Perm_ptr_T) : t_Perm_ptr_T = self.final
  
  meta "rewrite_def" function fin_Ghost_refmut_Perm_ptr_T
  
  let rec read_T (mode: Mode.t) (src: Opaque.ptr) (perm: MutBorrow.t t_Perm_ptr_T)
    (return (x: tup2_T_Ghost_refmut_Perm_ptr_T)) =
    {[@stop_split] [@expl:read_T requires] ([@stop_split] [@expl:read 'perm' type invariant] inv_Ghost_refmut_Perm_ptr_T perm)
    /\ ([@stop_split] [@expl:read requires] src = ward_ptr_T perm.current)}
    any
    [ return (result: tup2_T_Ghost_refmut_Perm_ptr_T) ->
    {[@stop_split] [@expl:read_T ensures] ([@stop_split] [@expl:read ensures #0] result.f0'0 = val_ptr_T perm.current)
      /\ ([@stop_split] [@expl:read ensures #1] ward_ptr_T (fin_Ghost_refmut_Perm_ptr_T perm) = ward_ptr_T perm.current
        /\ ward_ptr_T result.f1'0.current = ward_ptr_T perm.current)
      /\ ([@stop_split] [@expl:read ensures #2] val_ptr_T (fin_Ghost_refmut_Perm_ptr_T perm)
      = val_ptr_T (fin_Ghost_refmut_Perm_ptr_T result.f1'0))}
      (! return {result}) ]
  
  predicate resolve_refmut_Perm_ptr_T [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_T) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_refmut_Perm_ptr_T
  
  predicate resolve_Ghost_refmut_Perm_ptr_T [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_T) =
    resolve_refmut_Perm_ptr_T _1
  
  meta "rewrite_def" predicate resolve_Ghost_refmut_Perm_ptr_T
  
  predicate resolve_refmut_T [@inline:trivial] (_1: MutBorrow.t t_T) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_refmut_T
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec f_T (mode: Mode.t) (r: MutBorrow.t t_T) (return (x: t_T)) =
    {[@stop_split] [@expl:f 'r' type invariant] inv_refmut_T r}
    (! bb0
    [ bb0 = s0
      [ s0 = MutBorrow.borrow_final <t_T> {r.current} {MutBorrow.get_id r}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_7 <- _bor ] -{inv_T _bor.final}-
            [ &r <- { r with current = _bor.final } ] s1) [ _ck -> (! {[@expl:type invariant] inv_T r.current} any) ]
      | s1 = from_mut_T {mode} {_7} (fun (_x: tup2_ptr_T_Ghost_refmut_Perm_ptr_T) -> [ &_6 <- _x ] s2)
      | s2 = [ &ptr <- _6.f0 ] s3
      | s3 = [ &perm <- _6.f1 ] s4
      | s4 = read_T {mode} {ptr} {perm} (fun (_x: tup2_T_Ghost_refmut_Perm_ptr_T) -> [ &_8 <- _x ] s5)
      | s5 = s6 [ _ck -> (! {[@expl:type invariant] inv_Ghost_refmut_Perm_ptr_T _8.f1'0} any) ]
      | s6 = -{resolve_Ghost_refmut_Perm_ptr_T _8.f1'0}- s7
      | s7 = [ &_ret <- _8.f0'0 ] s8
      | s8 = s9 [ _ck -> (! {[@expl:type invariant] inv_refmut_T r} any) ]
      | s9 = -{resolve_refmut_T r}- s10
      | s10 = return {_ret} ] ]
    [ & _ret: t_T = Any.any_l ()
    | & r: MutBorrow.t t_T = r
    | & ptr: Opaque.ptr = Any.any_l ()
    | & perm: MutBorrow.t t_Perm_ptr_T = Any.any_l ()
    | & _6: tup2_ptr_T_Ghost_refmut_Perm_ptr_T = Any.any_l ()
    | & _7: MutBorrow.t t_T = Any.any_l ()
    | & _8: tup2_T_Ghost_refmut_Perm_ptr_T = Any.any_l () ])
    [ return (result: t_T) ->
    {[@stop_split] [@expl:f_T ensures] ([@stop_split] [@expl:f result type invariant] inv_T result)
      /\ ([@stop_split] [@expl:f ensures] result = r.current)}
      (! return {result}) ]
end
